Feature/prsum 10639 prsum 10469 le relation product insured status (#508)
* this will let joint owners own the same payments and avoid duplicates

* fixing filter

* remove flattened from commit

* [skip bump] version bump

* moving updates here

* updating changelog

* update plan manager

* [skip bump] version bump

* [skip bump] version bump

* lts update

* lts update

* lts update

* lts update

* lts update

* [skip bump] version bump

* migrate-ssdk-17 (#401)

* Bumping Service SDK to 16.1.6

* Bumping Service SDK to 17.0.0-rc.7

* update GHA

* update version to 15.0.0

* resolve master merge conflicts

* rollback the pipeline

* CORS-2393 - add customerCategory to ServiceAgreementV2

* update ssdk to 17.0.0

* update CHANGELOG.md

* set the version to 5.0.0

* update backbase-bom version to `2024.04-preview-rc.6`

* sync with 2024.04-preview-rc.15

* NOJIRA - add internalId for SA creatorLegalEntity field

* sync with backbase-bom 2024.03.4-LTS

* NOJIRA - add additional log

* NOJIRA - add additional log

* NOJIRA - fix the Mono issue that was failing the further execution

* set ProductGroups, ReferenceJobRoles and JobProfileUsers in SA-V2 existing mod

* NOJIRA - fix the existing SA missing product groups and jobprofileusers for subsequent runs

* CORS-2433: required changes to not throw exception

* CORS-2433: required changes to not throw exception

* improve test coverage

* improve test coverage

---------

Co-authored-by: mostafar <mostafar@backbase.com>
Co-authored-by: Olena Chubukina <olenac@backbase.com>
Co-authored-by: minas <minas@backbase.com>

* PRSUM-10218: Arrangement Manager Service API V3 Update

* PRSUM-10218: Conflict fix and changelog update

* PRSUM-10218: Add ReservedAmount spec back removed by mistake

* PRSUM-10218: Fix conflicts

* [skip bump] version bump

* DAS-1399 - add purpose field to service agreement

* DAS-1399 - fix version mismatch

* [skip bump] version bump

* DAS-1560 - update streams to 2024.10 bb bom, use plan-mana