@@ -8,6 +8,7 @@ import static com.backbase.dbs.paymentorder.api.service.v3.model.Status.READY;
 import static com.backbase.dbs.paymentorder.api.service.v3.model.Status.REJECTED;
 import static java.time.temporal.ChronoUnit.MILLIS;
 import static java.util.Collections.emptyList;
+import static java.util.Optional.ofNullable;
 import static reactor.core.publisher.Flux.defer;
 import static reactor.core.publisher.Flux.empty;
 import static reactor.util.retry.Retry.fixedDelay;
@@ -16,6 +17,18 @@ import com.backbase.dbs.arrangement.api.service.v3.ArrangementsApi;
 import com.backbase.dbs.arrangement.api.service.v3.model.ArrangementItem;
 import com.backbase.dbs.arrangement.api.service.v3.model.ArrangementSearchesListResponse;
 import com.backbase.dbs.arrangement.api.service.v3.model.ArrangementsSearchesPostRequest;
+import com.backbase.dbs.paymentorder.api.service.v3.model.AccessFilter;
+import com.backbase.dbs.paymentorder.api.service.v3.model.Status;
+import com.backbase.stream.config.PaymentOrderTypeConfiguration;
+import java.math.BigDecimal;
+import java.time.Duration;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.Objects;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import com.backbase.dbs.paymentorder.api.service.v3.PaymentOrdersApi;
 import com.backbase.dbs.paymentorder.api.service.v3.model.GetPaymentOrderResponse;
 import com.backbase.dbs.paymentorder.api.service.v3.model.PaymentOrderPostFilterRequest;
@@ -36,13 +49,6 @@ import com.backbase.stream.worker.model.UnitOfWork;
 import com.backbase.stream.worker.repository.UnitOfWorkRepository;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
-import java.math.BigDecimal;
-import java.time.Duration;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.reactive.function.client.WebClientRequestException;
 import org.springframework.web.reactive.function.client.WebClientResponseException;
@@ -52,24 +58,27 @@ import reactor.core.publisher.Mono;
 @Slf4j
 public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOrderTask> {
 
-    private static final PaymentOrderPostFilterRequest FILTER = new PaymentOrderPostFilterRequest().statuses(List.of(READY, ACCEPTED, PROCESSED, CANCELLED, REJECTED, CANCELLATION_PENDING));
+    private static final List<Status> FILTER = List.of(READY, ACCEPTED, PROCESSED, CANCELLED, REJECTED, CANCELLATION_PENDING);
 
     private static final int PAGE_SIZE = 1000;
 
     private final PaymentOrdersApi paymentOrdersApi;
     private final ArrangementsApi arrangementsApi;
     private final PaymentOrderTypeMapper paymentOrderTypeMapper;
+    private final PaymentOrderTypeConfiguration paymentOrderTypeConfiguration;
 
     public PaymentOrderUnitOfWorkExecutor(UnitOfWorkRepository<PaymentOrderTask, String> repository,
             StreamTaskExecutor<PaymentOrderTask> streamTaskExecutor,
             StreamWorkerConfiguration streamWorkerConfiguration,
             PaymentOrdersApi paymentOrdersApi,
             ArrangementsApi arrangementsApi,
-            PaymentOrderTypeMapper paymentOrderTypeMapper) {
+            PaymentOrderTypeMapper paymentOrderTypeMapper,
+            PaymentOrderTypeConfiguration paymentOrderTypeConfiguration) {
         super(repository, streamTaskExecutor, streamWorkerConfiguration);
         this.paymentOrdersApi = paymentOrdersApi;
         this.arrangementsApi = arrangementsApi;
         this.paymentOrderTypeMapper = paymentOrderTypeMapper;
+        this.paymentOrderTypeConfiguration = paymentOrderTypeConfiguration;
     }
 
     public Flux<UnitOfWork<PaymentOrderTask>> prepareUnitOfWork(List<PaymentOrderIngestRequest> items) {
@@ -102,19 +111,19 @@ public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOr
      * Gets the list of payments that are persisted in DBS for a specific user.
      * The transfers have been divided by destination product type.
      *
-     * @param paymentOrderIngestContext2 Holds all the Ingestion details.
+     * @param paymentOrderIngestContext Holds all the Ingestion details.
      * @return A Mono of List of GetPaymentOrderResponse.
      */
-    private @NotNull @Valid Mono<PaymentOrderIngestContext> getPersistedScheduledTransfers(PaymentOrderIngestContext paymentOrderIngestContext2) {
+    private @NotNull @Valid Mono<PaymentOrderIngestContext> getPersistedScheduledTransfers(PaymentOrderIngestContext paymentOrderIngestContext) {
 
         List<GetPaymentOrderResponse> listOfPayments = new ArrayList<>();
 
-        return getPayments(paymentOrderIngestContext2.internalUserId())
+        return getPayments(paymentOrderIngestContext.arrangementIds())
                 .map(response -> {
                     listOfPayments.addAll(response.getPaymentOrders());
                     return listOfPayments;
                 })
-                .map(paymentOrderIngestContext2::existingPaymentOrder)
+                .map(getPaymentOrderResponses -> paymentOrderIngestContext.existingPaymentOrder(getPaymentOrderResponses))
                 .doOnSuccess(result ->
                         log.debug("Successfully fetched dbs scheduled payment orders"));
     }
@@ -125,7 +134,7 @@ public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOr
                 .flatMap(this::getArrangement)
                 .distinct()
                 .collectList()
-                .map(paymentOrderIngestContext::arrangementIds);
+                .map(accountInternalIdGetResponseBody -> paymentOrderIngestContext.arrangementIds(accountInternalIdGetResponseBody));
     }
 
     private Mono<ArrangementSearchesListResponse> getArrangement(PaymentOrderPostRequest paymentOrderPostRequest) {
@@ -140,15 +149,21 @@ public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOr
     /**
      * Calls the payment order service to retrieve existing payments.
      *
-     * @param internalUserId   The user's internal id that came with the Payments.
+     * @param arrangementIds   Check for all the arrangements that belong to this PMT.
      * @return A Mono with the response from the service api.
      */
-    private Mono<PaymentOrderPostFilterResponse> getPayments(String internalUserId) {
+    private Mono<PaymentOrderPostFilterResponse> getPayments(List<ArrangementSearchesListResponse> arrangementIds) {
 
-        if (isEmptyUserId(internalUserId)) {
+        if (isEmptyArrangmetIds(arrangementIds)) {
             return Mono.just(new PaymentOrderPostFilterResponse().paymentOrders(emptyList()).totalElements(new BigDecimal(0)));
         }
-        return pullFromDBS(internalUserId).map(result -> {
+        List<String> allArrangementIds = arrangementIds
+                .stream().flatMap(accountArrangementItems ->
+                        accountArrangementItems.getArrangementElements().stream())
+                .map(ArrangementItem::getId)
+                .collect(Collectors.toList());
+
+        return pullFromDBS(allArrangementIds).map(result -> {
             final var response = new PaymentOrderPostFilterResponse();
             response.setPaymentOrders(result);
             response.setTotalElements(new BigDecimal(result.size()));
@@ -232,32 +247,48 @@ public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOr
 
     }
 
-    private Mono<List<GetPaymentOrderResponse>> pullFromDBS(final @NotNull String userid) {
-        return defer(() -> retrieveNextPage(0, userid)
+    private Mono<List<GetPaymentOrderResponse>> pullFromDBS(final @NotNull List<String> arrangementIds) {
+        return defer(() -> retrieveNextPage(0, arrangementIds)
                 .expand(page -> {
                     // If there are no more pages, return an empty flux.
                     if (page.next >= page.total || page.requests.isEmpty()) {
                         return empty();
                     } else {
-                        return retrieveNextPage(page.next, userid);
+                        return retrieveNextPage(page.next, arrangementIds);
                     }
                 }))
                 .collectList()
                 .map(pages -> pages.stream().flatMap(page -> page.requests.stream()).toList());
     }
 
-    private Mono<DBSPaymentOrderPageResult> retrieveNextPage(int currentCount, final @NotNull String userId) {
+    private Mono<DBSPaymentOrderPageResult> retrieveNextPage(int currentCount, final @NotNull List<String> arrangementIds) {
+        List<String> paymentTypes = paymentOrderTypeConfiguration.getTypes();
+        var paymentOrderPostFilterRequest = new PaymentOrderPostFilterRequest();
+        List<AccessFilter> accessFilters = paymentTypes.stream()
+                .map(paymentType -> new AccessFilter()
+                        .paymentType(paymentType)
+                        .arrangementIds(arrangementIds))
+                .collect(Collectors.toList());
+        paymentOrderPostFilterRequest.setAccessFilters(accessFilters);
+        paymentOrderPostFilterRequest.setStatuses(FILTER);
+
         return paymentOrdersApi.postFilterPaymentOrders(null, null, null, null, null, null, null, null, null,
-                        null, null, null, userId, null, null, currentCount / PAGE_SIZE, PAGE_SIZE, null,
-                        null, FILTER)
+                        null, null, null, null, null, null, currentCount / PAGE_SIZE, PAGE_SIZE, null,
+                        null, paymentOrderPostFilterRequest)
                 .retryWhen(fixedDelay(3, Duration.of(2000, MILLIS)).filter(
                         t -> t instanceof WebClientRequestException
                                 || t instanceof WebClientResponseException.ServiceUnavailable))
                 .map(resp -> {
-                    final List<GetPaymentOrderResponse> results = resp.getPaymentOrders() == null ? emptyList() : resp.getPaymentOrders();
-                    final var total = resp.getTotalElements() == null ? new BigDecimal(0).intValue() : resp.getTotalElements().intValue();
+                    // getPaymentOrders() is marked with @NotNull, dunno why still checking its nullability?
+                    final List<GetPaymentOrderResponse> results = ofNullable(resp.getPaymentOrders()).orElse(emptyList());
+                    // getTotalElements() is marked with @NotNull, dunno why still checking its nullability?
+                    final var total = ofNullable(resp.getTotalElements()).orElse(new BigDecimal(0)).intValue();
                     return new DBSPaymentOrderPageResult(currentCount + results.size(), total, results);
                 });
+    }
+
+    private boolean isEmptyArrangmetIds(List<ArrangementSearchesListResponse> arrangementItems) {
+        return arrangementItems == null || arrangementItems.isEmpty();
     }
 
     private boolean isEmptyUserId(String userId) {
@@ -268,7 +299,7 @@ public class PaymentOrderUnitOfWorkExecutor extends UnitOfWorkExecutor<PaymentOr
         if (paymentOrderPostRequests == null || paymentOrderPostRequests.isEmpty()) {
             return null;
         } else {
-            return paymentOrderPostRequests.get(0).getInternalUserId();
+            return paymentOrderPostRequests.getFirst().getInternalUserId();
         }
     }
 }
